# skilltest-buienradar

./: README.md  analyse_buienradar_data  analyse_buienradar_data.ipynb  automation_description_Q9.md  buienradar.db  erd.md  load_buienradar_data  pyproject.toml  test.ipynb
.github/workflows/: scheduled_ingestion.yml
Archive/: exploration.ipynb
